--- a/globals.css
+++ b/globals.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html {
+  @apply bg-[#E3E3E3] text-gray-900;
+}
+
+html.dark {
+  @apply bg-gray-900 text-gray-100;
+}
